--- a/UmiShopApi/Dockerfile
+++ b/UmiShopApi/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+CMD python manage.py migrate --run-syncdb && python manage.py runserver 0.0.0.0:8000
