--- a/UmiShopApi/docker-compose.yml
+++ b/UmiShopApi/docker-compose.yml
@@ -1,16 +1,17 @@
 services:
   rabbitmq:
     image: rabbitmq
-    #network_mode: host
     ports:
       - 5672:5672
 
   api:
     build: .
-    #network_mode: host
     ports:
       - 8000:8000
+    env_file:
+      - .env
   celery:
     build: .
-    #network_mode: host
+    env_file:
+      - .env
     command: celery -A UmiShopApi worker -l INFO
