--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: debug
+        run: ls
       - name: go in the api directory
         run: cd UmiShopApi
       - name: Build the stack
