--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: create env file
+      - run: echo "DOCKER=1" >> UmiShopApi/.env
       - name: Build the stack
         run: docker-compose -f UmiShopApi/docker-compose.yml up -d
       - name: Test
