--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,7 +13,5 @@ jobs:
         run: echo "DOCKER=1" >> UmiShopApi/.env
       - name: Build the stack
         run: docker-compose -f UmiShopApi/docker-compose.yml up -d
-      - name: check docker name
-        run: docker ps
       - name: Test
-        run: docker exec -it umishopapi_api python manage.py test
+        run: docker exec -it umishopapi_api_1 python manage.py test
